High contrast fix for toolbar dropdown menus
Before: https://i.imgur.com/azF6T05.png
After: https://i.imgur.com/9gbVmkI.png

Bug:1290801
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3415130
Commit-Queue: Chait Pinnamaneni <cpinnamaneni@microsoft.com>

--- a/front_end/ui/legacy/softDropDownButton.css
+++ b/front_end/ui/legacy/softDropDownButton.css
@@ -26,6 +26,8 @@ button.soft-dropdown > .title {
 @media (forced-colors: active) {
   button.soft-dropdown {
     border: 1px solid ButtonText;
+    background: ButtonFace;
+    color: ButtonText;
   }
 
   button.soft-dropdown[disabled] {
