--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -537,4 +537,10 @@ devtools-icon.leading-issue-icon {
   .toolbar-item .devtools-link {
     color: linktext;
   }
+
+  .toolbar-has-dropdown {
+    forced-color-adjust: none;
+    background: ButtonFace;
+    color: ButtonText;
+  }
 }
